<resources>
    <string name="app_name">Food Storage Tracker</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="button_search_name_text">Search by Name</string>
    <string name="button_search_category_text">Search by Category</string>
    <string name="button_addItem_text">Add Item</string>
    <string name="button_allItems_text">All Items</string>
    <string name="button_Settings_text">Settings</string>
    <string name="activity_addItem_title">Tracker - Add Item</string>
    <string name="activity_deleteItem_title">Tracker - Delete Item</string>
    <string name="activity_settings_title">Tracker - Settings</string>
    <string name="activity_ViewItem_title">Tracker - View Item</string>
    <string name="activity_ViewList_title">Tracker - View List</string>
    <string name="activity_modifyItem_title">Tracker - Modify Item</string>
    <string name="hint_search">Search...</string>
    <string name="confirm_delete_text">Are you sure you want to delete this item:</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="button_delete_text">Delete</string>
    <string name="default_settings_json">{"darkMode":false,"dateFormat":0,"reminderTime":1,"reminderUnits":1,"useScanner":false}</string>
    <string name="darkmode_text">Dark Mode</string>
    <string name="usescanner_text">Scanner</string>
    <string name="dateformat_text">Date Format:</string>
    <string name="send_notifications">Send notifications</string>
    <string name="before_food_expires">before food expires.</string>
    <string name="button_save_text">Save</string>
    <string name="clear_database_button_text">Clear Database</string>
    <string name="bug_report_button">Report a Bug</string>
    <string name="button_reset_settings_text">Reset</string>
    <string name="channel_name">foodstoragetracker</string>
    <string name="channel_description">foodstoragetracker</string>
</resources>
